Upgrade to JDK 25