@@ -78,7 +78,7 @@ public class BatteryKV {
 		}
 		for(int i = min; i < max; i++) {
 			fkey = String.format(uniqKeyFmt, i);
-			bmap.put(fkey, new Long(i));
+			bmap.put(fkey, Long.valueOf(i));
 			++recs;
 		}
 		System.out.println("KV BATTERY1 SUCCESS in "+(System.currentTimeMillis()-tims)+" ms. Stored "+recs+" records.");
@@ -472,7 +472,7 @@ public class BatteryKV {
 		String fkey = null;
 		for(int i = min; i < max1; i++) {
 			fkey = String.format(uniqKeyFmt, i);
-			bmap.put(fkey, new Long(i));
+			bmap.put(fkey, Long.valueOf(i));
 			++recs;
 		}
 		long s = bmap.size();
@@ -480,7 +480,7 @@ public class BatteryKV {
 			System.out.println("Size at halway point of restore incorrect:"+s+" should be "+max1);
 		for(int i = max1; i < max; i++) {
 			fkey = String.format(uniqKeyFmt, i);
-			bmap.put(fkey, new Long(i));
+			bmap.put(fkey, Long.valueOf(i));
 			++recs;
 		}
 		System.out.println("KV BATTERY18 SUCCESS in "+(System.currentTimeMillis()-tims)+" ms. Stored "+recs+" records, rejected "+dupes+" dupes.");
