@@ -79,7 +79,7 @@ public class BatteryKVStream {
 		}
 		for(int i = min; i < max; i++) {
 			fkey = String.format(uniqKeyFmt, i);
-			bmap.put(fkey, new Long(i));
+			bmap.put(fkey, Long.valueOf(i));
 			++recs;
 		}
 		System.out.println("KV BATTERY1 SUCCESS in "+(System.currentTimeMillis()-tims)+" ms. Stored "+recs+" records.");
@@ -486,7 +486,7 @@ public class BatteryKVStream {
 		String fkey = null;
 		for(int i = min; i < max1; i++) {
 			fkey = String.format(uniqKeyFmt, i);
-				bmap.put(fkey, new Long(i));
+				bmap.put(fkey, Long.valueOf(i));
 				++recs;
 		}
 		long s = bmap.size();
@@ -494,7 +494,7 @@ public class BatteryKVStream {
 			System.out.println("Size at halway point of restore incorrect:"+s+" should be "+max1);
 		for(int i = max1; i < max; i++) {
 			fkey = String.format(uniqKeyFmt, i);
-			bmap.put(fkey, new Long(i));
+			bmap.put(fkey, Long.valueOf(i));
 			++recs;
 		}
 		System.out.println("KV BATTERY18 SUCCESS in "+(System.currentTimeMillis()-tims)+" ms. Stored "+recs+" records ");
