@@ -89,7 +89,7 @@ public class BatteryKVTransaction {
 		}
 		for(int i = min; i < max; i++) {
 			fkey = String.format(uniqKeyFmt, i);
-				bmap.put(xid, fkey, new Long(i));
+				bmap.put(xid, fkey, Long.valueOf(i));
 				++recs;
 		}
 		DatabaseManager.commitTransaction(xid);
@@ -108,7 +108,7 @@ public class BatteryKVTransaction {
 		String fkey = null;
 		for(int i = max; i < max*2; i++) {
 			fkey = String.format(uniqKeyFmt, i);
-			bmap2.put(xid, fkey, new Long(fkey));
+			bmap2.put(xid, fkey, Long.valueOf(fkey));
 			++recs;
 		}
 		if( recs > 0) {
@@ -482,14 +482,14 @@ public class BatteryKVTransaction {
 		String fkey = null;
 		for(int i = min; i < max1; i++) {
 			fkey = String.format(uniqKeyFmt, i);
-			bmap2.put(xid2, fkey, new Long(i));
+			bmap2.put(xid2, fkey, Long.valueOf(i));
 			++recs;
 		}
 		System.out.println(xid2+" Checkpointing..");
 		DatabaseManager.checkpointTransaction(xid2);
 		for(int i = max1; i < max; i++) {
 			fkey = String.format(uniqKeyFmt, i);
-			bmap2.put(xid2, fkey, new Long(i));
+			bmap2.put(xid2, fkey, Long.valueOf(i));
 			++recs;
 		}
 		DatabaseManager.commitTransaction(xid2);
